--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!--- basic page needs
    ================================================== -->
 	<meta charset="utf-8">
-	<title>Kards</title>
+	<title>Umar Fakhriy</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -28,9 +28,6 @@
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
 
-	<!-- favicons
-	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
 
 </head>
 
