--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<html class="no-js" lang="en"> <!--<![endif]-->
+<html class="no-js" lang="en">
 
 <head>
-
-	<!--- basic page needs
-   ================================================== -->
 	<meta charset="utf-8">
 	<title>Umar Fakhriy</title>
 	<meta name="description" content="">
@@ -26,7 +20,6 @@
 	<!-- script
    ================================================== -->
 	<script src="js/modernizr.js"></script>
-	<script src="js/pace.min.js"></script>
 
 
 </head>
@@ -62,8 +55,8 @@
 
 		<ul class="intro-social">
 			<li><a href="https://www.facebook.com/umar.fakhry.54/"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="https://www.instagram.com/umarfakhriy/"><i class="fa fa-linkedin"></i></a></li>
-			<li><a href="https://www.linkedin.com/in/umarfakhriy/"><i class="fa fa-instagram"></i></a></li>
+			<li><a href="https://www.instagram.com/umarfakhriy/"><i class="fa fa-instagram"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/umarfakhriy/"><i class="fa fa-linkedin"></i></a></li>
 		</ul> <!-- /intro-social -->
 
 	</section> <!-- /intro -->
@@ -242,13 +235,13 @@
 
 				<ul class="footer-social">
 					<li><a href="https://www.facebook.com/umar.fakhry.54/"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://www.instagram.com/umarfakhriy/"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/umarfakhriy/"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.instagram.com/umarfakhriy/"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/umarfakhriy/"><i class="fa fa-linkedin"></i></a></li>
 				</ul>
 
 			</div>
 
-			
+
 
 			<div id="go-top">
 				<a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
