--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 				<div class="intro-info">
 
-					<img src="images/profile-pic.jpg" alt="Profile Picture">
+					<img src="images/profilepic.png" alt="Profile Picture">
 
 					<p class="lead">Undergraduate student of Information Systems and Technology at Universitas Negeri
 						Jakarta (UNJ) with a keen interest in Mobile and Web Development. I possess skills in mobile
