--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<!-- script
    ================================================== -->
-	<script src="js/modernizr.js"></script>
+	<!-- <script src="js/modernizr.js"></script> -->
 
 
 </head>
