--- a/index.html
+++ b/index.html
@@ -158,6 +158,56 @@
 
 	</section> <!-- /process-->
 
+<!-- "New Arrivals" -->
+<section id="resume" class="grey-section">
+	<div class="row section-intro ">
+		<div class="col-twelve">
+
+			<h5>Portfolio</h5>
+			<h1>Here Are Some of My Works.</h1>
+
+			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia
+				nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+
+		</div>
+	</div> <!-- /section-intro-->
+	<div class="row resume-pad">
+		<div class="col-four tab-full">
+			<div class="new-arrival-container">
+				<div class="new-arrival-overlay">
+					<h3 class="text-uppercase new-arrival-title">
+						<span class="font-script">Summer</span>
+						<span class="smaller-text">Collection</span>
+					</h3>
+				</div>
+				<img src="images/new-arrival-1.jpg" alt="New Arrival 1" class="img-responsive">
+			</div>
+		</div>
+		<div class="col-four tab-full">
+			<div class="new-arrival-container">
+				<div class="new-arrival-overlay">
+					<h3 class="text-uppercase new-arrival-title">
+						<span class="font-script">Summer</span>
+						<span class="smaller-text">Collection</span>
+					</h3>
+				</div>
+				<img src="images/new-arrival-2.jpg" alt="New Arrival 2" class="img-responsive">
+			</div>
+		</div>
+		<div class="col-four tab-full">
+			<div class="new-arrival-container">
+				<div class="new-arrival-overlay">
+					<h3 class="text-uppercase new-arrival-title">
+						<span class="font-script">Summer</span>
+						<span class="smaller-text">Collection</span>
+					</h3>
+				</div>
+				<img src="images/new-arrival-3.jpg" alt="New Arrival 3" class="img-responsive">
+			</div>
+		</div>
+	</div>
+</section> <!-- end "New Arrivals" -->
+
 	<!-- contact
    ================================================== -->
 	<section id="contact">
@@ -223,8 +273,6 @@
 		</div> <!-- /contact-info -->
 
 	</section> <!-- /contact -->
-
-
 	<!-- footer
    ================================================== -->
 
